--- a/recipes/llm-voice-assistant/web/package.json
+++ b/recipes/llm-voice-assistant/web/package.json
@@ -7,6 +7,7 @@
     "build:all": "rollup --config --bundleConfigAsCjs",
     "build:types": "tsc --declaration --declarationMap --emitDeclarationOnly --outDir ./types",
     "build": "npm-run-all --parallel build:**",
+    "lint": "eslint . --ext .js,.ts",
     "start": "yarn run http-server -a localhost -p 5000"
   },
   "keywords": [
