--- a/recipes/llm-voice-assistant/web/package.json
+++ b/recipes/llm-voice-assistant/web/package.json
@@ -44,6 +44,6 @@
     "rollup": "^4.18.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.5"
+    "typescript": "~5.3.3"
   }
 }
