Address PR comments

--- a/recipes/llm-voice-assistant/ios/PicoLLMVoiceAssistantDemo/Info.plist
+++ b/recipes/llm-voice-assistant/ios/PicoLLMVoiceAssistantDemo/Info.plist
@@ -21,7 +21,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>For voice activity detection</string>
+	<string>For voice assistant</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
