--- a/.github/workflows/swift-codestyle.yml
+++ b/.github/workflows/swift-codestyle.yml
@@ -3,11 +3,11 @@ name: Swift Codestyle
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - '**/*.swift'
   pull_request:
-    branches: [ master, 'v[0-9]+.[0-9]+' ]
+    branches: [ main, 'v[0-9]+.[0-9]+' ]
     paths:
       - '**/*.swift'
 
