--- a/recipes/llm-voice-assistant/web/package.json
+++ b/recipes/llm-voice-assistant/web/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@picovoice/cheetah-web": "^2.0.0",
     "@picovoice/orca-web": "^0.2.1",
-    "@picovoice/picollm-web": "~1.0.4",
+    "@picovoice/picollm-web": "=1.0.7",
     "@picovoice/porcupine-web": "^3.0.3",
     "@picovoice/web-voice-processor": "^4.0.9"
   },
