--- a/recipes/llm-voice-assistant/nodejs/package.json
+++ b/recipes/llm-voice-assistant/nodejs/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "eslint . --ext .js"
   },
   "keywords": [
     "Picovoice",
@@ -19,7 +20,12 @@
     "@picovoice/porcupine-node": "^3.0.3",
     "@picovoice/pvrecorder-node": "^1.2.3",
     "@picovoice/pvspeaker-node": "^1.0.0",
-    "commander": "^6.1.0"
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "commander": "^6.1.0",
+    "eslint": "^8.13.0",
+    "eslint-plugin-jest": "^27.1.6",
+    "typescript": "^4.6.2"
   },
   "homepage": "https://picovoice.ai/",
   "repository": {
