--- a/recipes/llm-voice-assistant/android/llm-voice-assistant/build.gradle
+++ b/recipes/llm-voice-assistant/android/llm-voice-assistant/build.gradle
@@ -65,6 +65,6 @@ dependencies {
     implementation 'ai.picovoice:android-voice-processor:1.0.2'
     implementation 'ai.picovoice:porcupine-android:3.0.1'
     implementation 'ai.picovoice:cheetah-android:2.0.0'
-    implementation 'ai.picovoice:picollm-android:1.0.0'
+    implementation files('/home/ian/work/github/picollm/binding/android/PicoLLM/picollm/build/outputs/aar/picollm-release.aar')
     implementation 'ai.picovoice:orca-android:1.0.0'
 }
