--- a/recipes/llm-voice-assistant/nodejs/package.json
+++ b/recipes/llm-voice-assistant/nodejs/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@picovoice/cheetah-node": "^2.0.2",
     "@picovoice/orca-node": "^1.0.0",
-    "@picovoice/picollm-node": "=1.0.2",
+    "@picovoice/picollm-node": "1.1.0",
     "@picovoice/porcupine-node": "^3.0.3",
     "@picovoice/pvrecorder-node": "^1.2.3",
     "@picovoice/pvspeaker-node": "^1.0.1",
