--- a/recipes/llm-voice-assistant/android/llm-voice-assistant/build.gradle
+++ b/recipes/llm-voice-assistant/android/llm-voice-assistant/build.gradle
@@ -39,7 +39,7 @@ android {
     }
     buildTypes {
         debug {
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
         }
         release {
             minifyEnabled false
@@ -65,6 +65,6 @@ dependencies {
     implementation 'ai.picovoice:android-voice-processor:1.0.2'
     implementation 'ai.picovoice:porcupine-android:3.0.1'
     implementation 'ai.picovoice:cheetah-android:2.1.0'
-    implementation 'ai.picovoice:picollm-android:1.3.0'
+    implementation 'ai.picovoice:picollm-android:1.3.1'
     implementation 'ai.picovoice:orca-android:1.1.0'
 }
